--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="class1"></div><div><p>Number 1 - I'm a class!</p></div>
-    <div id= "id1"></div><div> Number 2 - I'm one ID.</div>
-    <div class="class2"><p> Number 3 - I'm a class, but cooler! </p></div>
-    <div id= "id2"></div><div> Number 4 - I'm another ID. </div>
-    <div class="class3"><div><p> Number 5 - I'm a class! </p></div>
+    <p class="class">Number 1 - I'm a class!</p>
+    <div id="id1"> Number 2 - I'm one ID.</div>
+    <p class="class" id="id3"> Number 3 - I'm a class, but cooler! </p>
+    <div id="id2"> Number 4 - I'm another ID. </div>
+    <p class="class"> Number 5 - I'm a class! </p>
   </body>
   
-</html>
+</html> 
